LightTube/wwwroot/css/lighttube.css
/* ... */
.icon-button:hover {
    background-color: var(--button-hover-background);
}

.icon-button:active {
    background-color: var(--button-active-background);
}

*[class^="btn"] {
    height: 36px;
    display: flex;
    flex-direction: row;
    gap: 8px;
    border: 1px solid var(--border-color);
    justify-content: center;
    align-items: center;
    transition: background-color linear 100ms;
    padding: 0 8px;
    text-decoration: none;
    user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
    border-radius: 18px;
    width: fit-content;
}

*[class^="btn"]:hover {
    background-color: var(--button-hover-background);
}

*[class^="btn"]:active {
    background-color: var(--button-active-background);
}

*[class^="btn"] > .icon {
    margin: 8px 0;
}

*[class^="btn"] > .text {
    margin: 8px 0;
    padding: 0 8px;
    line-height: 24px;
    font-weight: 500;
    white-space: nowrap;
}

.btn-blue, .btn-blue > svg {
    color: #3ea6ff;
}

.btn-blue:hover {
    background-color: var(--btn-hover-color-blue);
}

.btn-white, .btn-white > svg {
    background-color: #fff;
    color: #000;
}

.btn-white:hover {
    background-color: var(--btn-hover-color-white);
    border-color: var(--btn-hover-color-white);
    color: #000;
}

.btn-outline {
    background-color: #0000;
}

.btn-subscribe {
    background-color: var(--subscribe-button, #c00);
    color: white;
}

.btn-subscribe:hover {
    background-color: var(--subscribe-button-hover, #c00);
}

.btn-subscribed {
    background-color: var(--subscribe-button-subscribed);
    color: var(--text-primary);
}

.btn-subscribed:hover {
    background-color: var(--subscribe-button-subscribed-hover);
}

.btn-subscribed:active {
    background-color: var(--chip-background-active);
}

/* ==== WATCH PAGE START ==== */

@media screen and (min-width: 1085px) {
    .watch-page {
        display: grid;
        grid-template-columns: 1fr 400px;
        grid-template-rows: auto auto max-content;
        gap: 12px 24px;
        grid-template-areas:
			"player second-column"
			"info second-column"
			"comments second-column";
        margin: 24px auto auto;
        padding: 0 24px;
    }
}

@media screen and (max-width: 1085px) {
    .watch-page {
        display: grid;
        grid-auto-flow: column;
        grid-template-columns: 1fr;
        grid-auto-rows: auto;
        gap: 12px 24px;
        grid-template-areas:
			"player"
			"info"
			"second-column"
			"comments";
        padding: 0 8px;
    }

    .player-container {
        aspect-ratio: 16 / 9;
        width: 100vw;
        margin-left: -8px;
        height: auto !important;
    }
}

.watch-page, .watch-page > div {
    box-sizing: border-box;
    min-height: 100px;
}

.watch-page {
    max-width: 1684px;
}

.player-container {
    max-width: var(--video-player-width-max);
    grid-area: player;
    max-height: var(--video-player-height-max);
}

.player-wrapper {
    background-color: #000;
    height: 100%;
    margin: auto;
}

.player {
    width: 100%;
    height: 100%;
}

.player-error-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0 20%;
    height: 100%;
    gap: 32px;
}

@media screen and (max-width: 1085px) {
    .player-error-container {
        padding: 8px;
    }

    .player-error-container svg {
        width: 32px;
        height: 32px;
    }
}

.player-error-container *:not(a) {
    color: white;
}

.player-error-container .title {
    font-size: 1.3rem;
}

.noscript-quality-switcher {
    background-color: var(--nojs-color-switcher, #f5d562);
    color: var(--text-primary, #000);
    padding: 8px;
    font-size: 1.1rem;
    z-index: 20;
    position: relative;
    top: 0;
    bottom: 2rem;
}

.playlist-view-container {
    grid-area: playlist;
}

.second-column {
    grid-area: second-column;
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.recommendations-container summary {
    font-size: large;
    cursor: pointer;
    font-weight: bold;
    color: var(--text-primary, #fff);
}

.recommended-videos {
    display: flex;
    gap: 8px;
    flex-direction: column;
}

.playlist-view-container {
    background-color: var(--playlist-background);
    border: 1px solid var(--border-color);
    border-radius: 16px;
    overflow: hidden;
}

.playlist-view__header {
    background-color: var(--playlist-header-background);
    border-top-right-radius: 16px;
    border-top-left-radius: 16px;
    height: 68px;
    padding: 16px 16px;
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.playlist-view__header > .title {
    font-size: 1.2rem;
}

.playlist-view__content {
    height: calc(100% - 92px);
    overflow-y: scroll;
}

@media screen and (min-width: 1085px) {
    .info-container {
        grid-template-columns: 1fr 1fr;
        grid-auto-rows: max-content;
        gap: 12px;
        grid-template-areas: "title title" "channel buttons" "description description";
    }

    .info-container > .buttons {
        justify-content: end;
    }
}

.info-container {
    display: grid;
}

@media screen and (max-width: 1085px) {
    .info-container {
        grid-template-rows: auto max-content max-content;
        gap: 12px;
        grid-template-areas: "title" "channel" "buttons" "description";
        margin-right: 8px;
    }

    .second-column {
        margin-right: 8px;
    }

    .info-container > .buttons {
        flex-wrap: wrap;
    }
}

.info-container > .title {
    grid-area: title;
    line-height: 1.5rem;
    font-size: 1.4rem;
    font-weight: bold;
    color: var(--text-primary);
}

.info-container > .description {
    grid-area: description;
    font-size: 1rem;
    color: var(--text-primary);
    background-color: var(--chip-background);
    padding: 16px;
    border-radius: 16px;
}

.info-container > .description:hover {
    background-color: var(--chip-background-hover);
}
/* ... */

